--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -27,19 +27,19 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "npm"
+          cache: "yarn"
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       - name: Run linting
-        run: npm run lint
+        run: yarn lint
 
       - name: Run type checking
-        run: npm run typecheck
+        run: yarn typecheck
 
       - name: Run tests with coverage
-        run: npm run test:ci
+        run: yarn test:ci
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
