--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:coverage": "jest --coverage --watch=false"
   },
   "dependencies": {
+    "@ai-sdk/react": "^3.0.88",
     "@base-ui/react": "^1.1.0",
     "@hookform/resolvers": "^5.2.2",
     "@hugeicons/core-free-icons": "^3.1.1",
@@ -43,6 +44,15 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@rive-app/react-webgl2": "^4.27.0",
+    "@streamdown/cjk": "^1.0.2",
+    "@streamdown/code": "^1.0.2",
+    "@streamdown/math": "^1.0.2",
+    "@streamdown/mermaid": "^1.0.2",
+    "@xyflow/react": "^12.10.0",
+    "ai": "^6.0.86",
+    "ansi-to-react": "^6.2.6",
     "better-auth": "^1.4.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -51,7 +61,10 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "jest": "^30.2.0",
-    "lucide-react": "^0.563.0",
+    "lucide-react": "^0.574.0",
+    "media-chrome": "^4.17.2",
+    "motion": "^12.34.1",
+    "nanoid": "^5.1.6",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
@@ -61,11 +74,16 @@
     "react-day-picker": "^9.13.1",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
+    "react-jsx-parser": "^2.4.1",
     "react-resizable-panels": "^4",
     "recharts": "2.15.4",
     "shadcn": "^3.8.4",
+    "shiki": "^3.22.0",
     "sonner": "^2.0.7",
+    "streamdown": "^2.2.0",
     "tailwind-merge": "^3.4.0",
+    "tokenlens": "^1.3.1",
+    "use-stick-to-bottom": "^1.1.3",
     "vaul": "^1.1.2",
     "xlsx": "^0.18.5",
     "zod": "^4.3.6"
