--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@hookform/resolvers": "^5.2.2",
     "@hugeicons/core-free-icons": "^3.1.1",
     "@hugeicons/react": "^1.1.4",
+    "@prisma/adapter-pg": "^7.4.1",
+    "@prisma/client": "^7.4.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
@@ -50,6 +52,7 @@
     "@streamdown/code": "^1.0.2",
     "@streamdown/math": "^1.0.2",
     "@streamdown/mermaid": "^1.0.2",
+    "@tanstack/react-table": "^8.21.3",
     "@xyflow/react": "^12.10.0",
     "ai": "^6.0.86",
     "ansi-to-react": "^6.2.6",
@@ -58,6 +61,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.3.1",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "jest": "^30.2.0",
@@ -67,7 +71,7 @@
     "nanoid": "^5.1.6",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
-    "pg": "^8.16.3",
+    "pg": "^8.18.0",
     "pg-promise": "^12.3.0",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
@@ -95,13 +99,14 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@types/jest": "^30.0.0",
-    "@types/node": "^25.0.3",
+    "@types/node": "^25.3.0",
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "jest-environment-jsdom": "^30.2.0",
+    "prisma": "^7.4.1",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.4.0",
