--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "nanoid": "^5.1.6",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
+    "pdf-lib": "^1.17.1",
     "pg": "^8.18.0",
     "pg-promise": "^12.3.0",
     "radix-ui": "^1.4.3",
