--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "eslint . --ignore-pattern coverage --ignore-pattern .next",
     "typecheck": "tsc --noEmit",
+    "vercel-build": "prisma generate && next build",
     "test": "jest",
     "test:ci": "jest --ci --runInBand --coverage --watch=false",
     "test:coverage": "jest --coverage --watch=false"
@@ -112,6 +113,5 @@
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
-  },
-  "postinstall": "prisma generate"
+  }
 }
